--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-select-dropdown": "^3.4.0",
